# CPM8085

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  log  replit.nix  warnings
cpm8080_avr/: Cargo.toml
cpm8080_avr/src/: main.rs
cpm8080_bin/: Cargo.toml
cpm8080_bin/src/: main.rs
cpm8080_core/: Cargo.toml
cpm8080_core/src/: lib.rs
cpm8080_core/src/cpm/: mod.rs
cpm8080_lib/: Cargo.toml  index.html
cpm8080_lib/src/: lib.rs
cpm8080_lib/src/sys/: mem.rs  mod.rs
i8080_core/: Cargo.toml
i8080_core/src/: lib.rs
i8080_core/src/cpu/: mod.rs
i8080_core/src/cpu/regs/: mod.rs
src/: lib.rs  main.rs
src/cpm/: mod.rs
src/cpu/: mod.rs
src/cpu/regs/: flags.rs  mod.rs
symlog/: Cargo.toml
tests/: CPUDIAGFIX.COM  TST8080.COM
