[package]
name = "cpm8080_core"
version = "0.1.0"
authors = ["Pedrocasf <pedrostarling2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = {version = "0.4.17", default-features = false, optional=false}
i8080_core = {path = "../i8080_core", features = ["log"]}
[features]
default = ["std"]
std = []